# rcom

./: .gitignore  .travis.old  .travis.yml  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: CI.yml
applications/rcdiscover/: CMakeLists.txt
applications/rcdiscover/src/: StringUtils.cpp
applications/rcdiscover/test/: CMakeLists.txt
applications/rcdiscover/test/src/: SerialPortConfigurationGenerator_tests.cpp
applications/rcgen/: CMakeLists.txt
applications/rcgen/src/: rcgen.c  rcgen.cpp
applications/rclaunch/: CMakeLists.txt
applications/rclaunch/include/: run.h
applications/rclaunch/src/: rclaunch.c  rclaunch.cpp  run.c
applications/rcom/: CMakeLists.txt
applications/rcom/src/: rcom.c
applications/rcregistry/: CMakeLists.txt
applications/rcregistry/include/: rcregistry_priv.h
applications/rcregistry/src/: rcregistry_main.c  rcregistry_main.cpp
applications/rcutil/: CMakeLists.txt
applications/rcutil/src/: rcutil.c  rcutil.cpp
cmake_modules/: RomiProjectBuildOptions.cmake
docs/: index.md  protocol.md
examples/: CMakeLists.txt
examples/binread/: binread.c  binread.h  binread.json  binread_main.c
examples/binwrite/: binwrite.c  binwrite.h  binwrite.json  binwrite_main.c
examples/camera/: camera.c  camera.h  camera.json  camera_impl.c  camera_main.c  camera_v4l.c  video4linux.c  video4linux.h
examples/camera_listener/: camera_listener.c  camera_listener.h  camera_listener.json  camera_listener_main.c
examples/motorcontroller/: motorcontroller.c  motorcontroller.h  motorcontroller.json  motorcontroller_main.c
examples/wheel_odometry/: wheel_odometry.c  wheel_odometry.h  wheel_odometry.json  wheel_odometry_main.c
html/rcregistry/: index.css  index.js  index_template.html  listen.js  style.css
html/rcregistry/css/: style.css
include/: rcom.h
include/private/: net.h  response_priv.h  service_priv.h  util_priv.h
include/rcom/: addr.h  app.h  circular.h  client.h  clock.h  data.h  datahub.h  datalink.h  dump.h  json.h  log.h  membuf.h  messagehub.h  messagelink.h  multipart_parser.h  proxy.h  rcom.h  registry.h  request.h  response.h  serial.h  service.h  streamer.h  streamerlink.h  thread.h  util.h
librcom/: CMakeLists.txt
librcom/include/private/: datahub_priv.h  datalink_priv.h  export.h  http.h  messagehub_priv.h  messagelink_priv.h  net.h  registry_priv.h  request_priv.h  response_priv.h  service_priv.h  sha1.h  streamer_priv.h  streamerlink_priv.h  util_priv.h
librcom/include/rcom/: IRPCHandler.h  RPCClient.h  RPCError.h  RPCServer.h  addr.h  app.h  circular.h  client.h  clock.h  data.h  datahub.h  datalink.h  defines.h  dump.h  messagehub.h  messagelink.h  multipart_parser.h  proxy.h  rcom.h  registry.h  request.h  response.h  service.h  streamer.h  streamerlink.h  util.h
librcom/src/: RPCClient.cpp  RPCServer.cpp  addr.c  app.c  circular.c  client.c  data.c  datahub.c  datalink.c  dump.c  export.c  http.c  messagehub.c  messagelink.c  multipart_parser.c  net.c  proxy.c  rcregistry.c  registry.c  request.c  response.c  service.c  sha1.c  streamer.c  streamerlink.c  util.c
librcom/src/YAGNI/: rcdev.c
librcom/test/: CMakeLists.txt
librcom/test/integration_test/: integration_test.py
librcom/test/mocks/: socket.mock.c  socket.mock.h
librcom/test/src/: addr_tests.cpp  circular_tests.cpp  data_tests.cpp  net_tests.cpp
librcompp/: CMakeLists.txt
librcompp-lite/: CMakeLists.txt
librcompp-lite/examples/: CMakeLists.txt
librcompp-lite/examples/rpc-hello-world/: hello-world-client.cpp  hello-world-server.cpp
librcompp-lite/include/: App.h  IMessageHub.h  IMessageLink.h  IRPCHandler.h  ITimer.h  IWebSocket.h  IWebSocketListener.h  IWebSocketServer.h  MessageHub.h  MessageHubListener.h  MessageLink.h  RPCClient.h  Rcom.h  RegistryServer.h  WebSocket.h  WebSocketServer.h
librcompp-lite/src/: Address.cpp  App.cpp  HttpParser.cpp  MessageHub.cpp  MessageHubListener.cpp  MessageLink.cpp  RPCClient.cpp  Rcom.cpp  RegistryProxy.cpp  RegistryServer.cpp  WebSocket.cpp  WebSocketServer.cpp  posix.cpp  rcom-registry.cpp
librcompp-lite/test/: CMakeLists.txt
librcompp-lite/test/mocks/: WebSocket.mock.h  WebSocketServerListener.mock.h
librcompp-lite/test/src/: requestparser_tests.cpp  responseparser_tests.cpp  websocket_tests.cpp  websocketserver_tests.cpp
librcompp/include/: ILink.h  IRPCClient.h  IRPCHandler.h  IRegistryEntry.h  MessageLink.h  RPCClient.h  RPCError.h  RPCServer.h  RegistryEntry.h  UuId.h
librcompp/src/: MessageLink.cpp  RPCClient.cpp  RPCServer.cpp  RegistryEntry.cpp  UuId.cpp
librcompp/test/: CMakeLists.txt
librcompp/test/src/: RegistryEntry_tests.cpp  UuId_tests.cpp
python/: client.py  demo.py  registry.py
rcdiscover/: CMakeLists.txt  main.cpp
rcdiscover/include/: ISerialPortConfigurationGenerator.h  ISerialPortDiscover.h  SerialPortConfigurationGenerator.h  SerialPortDiscover.h  StringUtils.h
rcdiscover/src/: SerialPortConfigurationGenerator.cpp  SerialPortDiscover.cpp  SerialPortIdentification.cpp  main.cpp
rcdiscover/test/: CMakeLists.txt
rcdiscover/test/src/: SerialPortConfigurationGenerator_tests.cpp  SerialPortDiscover_tests.cpp  SerialPortIdentification_tests.cpp  tests_main.cpp
rcdiscover/test/support/: TestUtil.hpp
src/: addr.c  app.c  circular.c  client.c  clock_posix.c  data.c  datahub.c  datahub_priv.h  datalink.c  datalink_priv.h  dump.c  export.c  export.h  http.c  http.h  http_parser.c  json.c  list.c  list.h  log.c  log_priv.h  mem.c  mem.h  membuf.c  membuf.h  messagehub.c  messagehub_priv.h  messagelink.c  messagelink_priv.h  multipart_parser.c  net.c  net.h  proxy.c  proxy.h  rcdev.c  rcgen.c  rclaunch.c  rcom.c  rcquery.c  rcregistry.c  (+26 more)
test/: CMakeLists.txt  integration_test.py
test/integration_test/: integration_test.py  registry.py  stress_test.py  stress_test_2.py
test/mocks/: socket.mock.h
test/src/: addr_tests.cpp  circular_tests.cpp  messagehub_test_invalid_handshake.py  messagehub_test_parallel_connections.py  messagehub_test_tcp_connection.py  messagehub_test_valid_handshake.py  net_tests.cpp  test_messagehub.py  tests_main.cpp
